--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-rev": "^0.1.0",
     "grunt-usemin": "^3.0.0"
   }
